js/src/tests/test262/built-ins/NativeErrors/TypeError/name.js
assert
.
sameValue
(
TypeError
.
name
"
TypeError
"
)
;
verifyNotEnumerable
(
TypeError
"
name
"
)
;
verifyNotWritable
(
TypeError
"
name
"
)
;
verifyConfigurable
(
TypeError
"
name
"
)
;
reportCompare
(
0
0
)
;
